--- a/sliding_window.ipynb
+++ b/sliding_window.ipynb
@@ -18,13 +18,13 @@
     "    output = []\n",
     "    q = collections.deque\n",
     "    l = r = 0 #pointers\n",
-    "    while r < len(nums):\n",
-    "        while q and q[nums[-1]] < nums[r]:\n",
+    "    while r < len(nums):#keep r inbound \n",
+    "        while q and q[nums[-1]] < nums[r]: #whole q is not empty and the top of deque is less than the current number \n",
     "            q.pop()\n",
-    "        q.append(r)\n",
+    "        q.append(r)#append the next number \n",
     "        if l > q[0]:\n",
     "            q.popleft()\n",
-    "        if (r+1) >= k:\n",
+    "        if (r+1) >= k:#corner case\n",
     "            output.append(nums[q[0]])\n",
     "            l += 1\n",
     "        r += 1 \n",
