--- a/coinchnage2.ipynb
+++ b/coinchnage2.ipynb
@@ -19,6 +19,7 @@
     }
    ],
    "source": [
+    "#unbounded knapsack\n",
     "class Solution:\n",
     "    def change(self, amount: int, coins: List[int]) -> int:\n",
     "        memo = {}\n",
