--- a/costmintickets.ipynb
+++ b/costmintickets.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#unbounded knapsack\n",
     "class Solution:\n",
     "    def mincostTickets(self, days: List[int], costs: List[int]) -> int:\n",
     "        dp = {}#cahciing the value\n",
