--- a/targetsum.ipynb
+++ b/targetsum.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#zero/one knapsack\n",
     "def targetsum(self , nums : List[int] , target : int) -> int:\n",
     "    dp = {} #this is a hashmap storing values in the form of (i ,total)\n",
     "    def backtrack(i ,total):\n",
