--- a/targetsum.ipynb
+++ b/targetsum.ipynb
@@ -35,7 +35,7 @@
     "            return dp[(i,total)]\n",
     "        dp[i,total] = (backtrack(i+1 , total + nums[i]) + backtrack(i+1 , total - nums[i]))\n",
     "        return dp[(i,total)]\n",
-    "    return backtrack(i,total)    "
+    "    return backtrack(0,0)    "
    ]
   },
   {
