--- a/targetsum.ipynb
+++ b/targetsum.ipynb
@@ -198,7 +198,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#0/1 knapsack\n",
+    "def targetsum(self , nums :List[nums] , target : int) -> int:\n",
+    "    dp = {} #chachig using hashmap\n",
+    "    def backtrack(i,total):\n",
+    "        #i is the index and total signifies the target at any point of time\n",
+    "        if i == len(nums):\n",
+    "            return 1 if total == target else 0 #teranary operator\n",
+    "        if (i,total) in dp:\n",
+    "            return dp[(i,total)]\n",
+    "        dp[(i,total)] = (backtrack(i+1,total + nums[i]) + backtrack(i+1,total - nums[i]))\n",
+    "        return dp[(i,total)]\n",
+    "    return backtrack(0,0)\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
