--- a/targetsum.ipynb
+++ b/targetsum.ipynb
@@ -99,6 +99,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -114,6 +119,7 @@
    "source": [
     "#generators helps to save memory when computing big computation\n",
     "#generators are more effcient than list\n",
+    "#lazy computations\n",
     "import sys\n",
     "gen = (i  for i in range(1000))\n",
     "print(sum(gen))"
