--- a/longest_substring.ipynb
+++ b/longest_substring.ipynb
@@ -34,6 +34,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#manachers algorithm\n",
+    "def longestsubstring(self,s : str) -> str:\n",
+    "    res = \"\"\n",
+    "    reslen = 0\n",
+    "    for i in range (len(s)):\n",
+    "        l , r = i,i\n",
+    "        while l>=0 and r < len(s) and s[l] == s[r]:\n",
+    "            #odd length\n",
+    "            if (r-l+1) > reslen:#length of the palindrome \n",
+    "                res = s[l:r+1]\n",
+    "                reslen = r-1+1\n",
+    "            l -= 1\n",
+    "            r += 1\n",
+    "        #even length\n",
+    "        l , r = i,i+1\n",
+    "        while l>=0 and r < len(s) and s[l] == s[r]:\n",
+    "            if (r-l+1)>reslen:\n",
+    "                res = s[l:r+1]\n",
+    "                reslen = r-l+1\n",
+    "            l -= 1\n",
+    "            r += 1\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
