--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -99,6 +99,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#O(n) time complexity\n",
+    "nums = [1,2,3]\n",
+    "sum(nums)#sum\n",
+    "for i in nums: #looping through the loop\n",
+    "    print(i)\n",
+    "nums.insert(1,100) #inseritg at the middle\n",
+    "nums.remove(100)#removing from middle\n",
+    "print(100 in nums) #search\n",
+    "\n",
+    "import heapq\n",
+    "heapq.heapify(nums) #buld heap\n",
+    "# sometimes even nested loops can be O(n)\n",
+    "# (e.g. monotonic stack or sliding window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#O(n^2) time complexity\n",
+    "#traverse a square grid\n",
+    "nums = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "for i in range (len(nums)):\n",
+    "    for j in range (len(nums[i])):\n",
+    "        print(nums[i][j])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
