--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,10 @@
       "6\n",
       "7\n",
       "8\n",
-      "9\n"
+      "9\n",
+      "1 2\n",
+      "1 3\n",
+      "2 3\n"
      ]
     }
    ],
@@ -156,7 +159,123 @@
     "nums = [[1,2,3],[4,5,6],[7,8,9]]\n",
     "for i in range (len(nums)):\n",
     "    for j in range (len(nums[i])):\n",
-    "        print(nums[i][j])"
+    "        print(nums[i][j])\n",
+    "\n",
+    "#get every pair of element in an array\n",
+    "nums = [1, 2, 3]\n",
+    "for i in range(len(nums)):\n",
+    "    for j in range(i+1,len(nums)):\n",
+    "        print(nums[i],nums[j])\n",
+    "# Insertion sort (insert in middle n times -> n^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4\n",
+      "1 5\n",
+      "1 6\n",
+      "2 4\n",
+      "2 5\n",
+      "2 6\n",
+      "3 4\n",
+      "3 5\n",
+      "3 6\n",
+      "--------------------------------\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#O(n*m)\n",
+    "#get every pais of element from two array\n",
+    "nums1 , nums2 = [1,2,3],[4,5,6]\n",
+    "for i in range(len(nums1)):\n",
+    "    for j  in range(len(nums2)):\n",
+    "        print(nums1[i],nums2[j])\n",
+    "print(\"--------------------------------\")\n",
+    "#traverse thriugh a rectangular grid\n",
+    "nums = [[1,2,3],[4,5,6]]\n",
+    "for i in range(len(nums)):\n",
+    "    for j in range(len(nums[i])):\n",
+    "        print(nums[i][j])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "1 2 4\n",
+      "1 2 5\n",
+      "1 2 6\n",
+      "1 3 4\n",
+      "1 3 5\n",
+      "1 3 6\n",
+      "1 4 5\n",
+      "1 4 6\n",
+      "1 5 6\n",
+      "2 3 4\n",
+      "2 3 5\n",
+      "2 3 6\n",
+      "2 4 5\n",
+      "2 4 6\n",
+      "2 5 6\n",
+      "3 4 5\n",
+      "3 4 6\n",
+      "3 5 6\n",
+      "4 5 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#O(n^3)\n",
+    "#getting all the triplet pair\n",
+    "nums = [1,2,3,4,5,6]\n",
+    "for i in range(len(nums)):\n",
+    "    for j in range(i+1,len(nums)):\n",
+    "        for k in range(j+1, len(nums)):\n",
+    "            print(nums[i],nums[j],nums[k])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#O(logn)\n",
+    "#binary search\n",
+    "nums = [1,2,3,4,5]\n",
+    "target = 6\n",
+    "l,r = 0,len(nums)-1\n",
+    "while l<=r:\n",
+    "    m = (l+r)//2\n",
+    "    if target < nums[m]:\n",
+    "        r = m-1 \n",
+    "    elif target > nums[m]:\n",
+    "        l = m+1\n",
+    "    else:\n",
+    "        print(m)\n",
+    "        break\n",
+    "#binary search on bst\n"
    ]
   },
   {
