--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -275,7 +275,16 @@
     "    else:\n",
     "        print(m)\n",
     "        break\n",
-    "#binary search on bst\n"
+    "#binary search on bst\n",
+    "def search(root,target):\n",
+    "    if not  root:\n",
+    "        return False\n",
+    "    if root.val < target:\n",
+    "        search(root.left,target)\n",
+    "    if root.val > target :\n",
+    "        search(root.right,target)\n",
+    "    else:\n",
+    "        return True\n"
    ]
   },
   {
@@ -283,7 +292,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#O(nlogn)\n",
+    "# HeapSort\n",
+    "import heapq\n",
+    "nums = [1, 2, 3, 4, 5]\n",
+    "heapq.heapify(nums)     # O(n)\n",
+    "while nums:\n",
+    "    heapq.heappop(nums) # O(logn)\n",
+    "\n",
+    "# MergeSort (and most built-in sorting functions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#O(2^n)\n",
+    "# Recursion, tree height n, two branches\n",
+    "def recursion(i, nums):\n",
+    "    if i == len(nums):\n",
+    "        return 0\n",
+    "    branch1 = recursion(i + 1, nums)\n",
+    "    branch2 = recursion(i + 2, nums)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#O(c^n)\n",
+    "# c branches, where c is sometimes n.\n",
+    "def recursion(i, nums, c):\n",
+    "    if i == len(nums):\n",
+    "        return 0\n",
+    "    \n",
+    "    for j in range(i, i + c):\n",
+    "        branch = recursion(j + 1, nums)\n"
+   ]
   }
  ],
  "metadata": {
