--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -334,6 +334,72 @@
     "    for j in range(i, i + c):\n",
     "        branch = recursion(j + 1, nums)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4]\n",
+    "flag = False\n",
+    "for i in range(len(nums)):\n",
+    "    for j in range(i+1,len(nums)):\n",
+    "        if nums[i] == nums[j]:\n",
+    "            flag = True\n",
+    "            break\n",
+    "print(flag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#anagrm (array)\n",
+    "s = \"anagram\"\n",
+    "t = \"nagram\"\n",
+    "def anagram(s : str , t: str) -> bool:\n",
+    "    if len(s) != len(t):\n",
+    "        return False\n",
+    "    countS , countT = {},{}\n",
+    "    for i in range(len(s)):\n",
+    "        countS[s[i]] = 1 + countS.get(s[i],0)\n",
+    "        countT[t[i]] = 1 + countT.get(t[i],0)\n",
+    "    for c in countS:\n",
+    "        if countS[c] != countT.get(c,0):\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "anagram(s,t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
