--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -396,6 +396,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #0(N^2)\n",
+    "# nums = [3,2,4]\n",
+    "# target = 6\n",
+    "# res = []\n",
+    "# for i in range(len(nums)):\n",
+    "#     for j in range(i+1, len(nums)):\n",
+    "#         if nums[i]+nums[j] == target:\n",
+    "#             res.append(i)\n",
+    "#             res.append(j)\n",
+    "# print(res)\n",
+    "\n",
+    "#O(n)\n",
+    "nums = [3,2,4]\n",
+    "target = 6\n",
+    "hashset = {}\n",
+    "for i,n in enumerate(nums):\n",
+    "    diff = target - i\n",
+    "    if diff in hashset:\n",
+    "        print([hashset[diff],i])\n",
+    "    hashset[n] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
