--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -424,6 +424,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 2\n",
+    "count = 0\n",
+    "res = {}\n",
+    "nums = [1,1,1,2,2,3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
