--- a/longest_substring.ipynb
+++ b/longest_substring.ipynb
@@ -12,6 +12,7 @@
     "        reslen = 0\n",
     "        for i in range(len(s)):\n",
     "            l , r = i,i\n",
+    "            #odd length\n",
     "            while l >=0 and r < len(s) and s[l] == s[r]:\n",
     "                if (r - 1 + 1) > reslen:\n",
     "                    res = s[l : r+1]\n",
@@ -23,7 +24,7 @@
     "                while l >=0 and r<len(s) and s[l] == s[r]:\n",
     "                    if (r - 1 + 1) > reslen:\n",
     "                        res = s[l: r+1]\n",
-    "                        relen = r-1+1\n",
+    "                        reslen = r-1+1\n",
     "                    l-=1\n",
     "                    r+=1\n",
     "            return res"
