--- a/bascis.ipynb
+++ b/bascis.ipynb
@@ -384,7 +384,7 @@
     "        return False\n",
     "    countS , countT = {},{}\n",
     "    for i in range(len(s)):\n",
-    "        countS[s[i]] = 1 + countS.get(s[i],0)\n",
+    "        countS[s[i]] = 1 + countS.get(s[i],0) #used to get past the key error \n",
     "        countT[t[i]] = 1 + countT.get(t[i],0)\n",
     "    for c in countS:\n",
     "        if countS[c] != countT.get(c,0):\n",
