--- a/product_of_array.ipynb
+++ b/product_of_array.ipynb
@@ -2,20 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'List' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/rohithr/Desktop/leetcode/product_of_array.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rohithr/Desktop/leetcode/product_of_array.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mproduct\u001b[39m(nums:List[\u001b[39mint\u001b[39m]) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m List[\u001b[39mint\u001b[39m]:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rohithr/Desktop/leetcode/product_of_array.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     res \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m] \u001b[39m*\u001b[39m (\u001b[39mlen\u001b[39m(nums))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rohithr/Desktop/leetcode/product_of_array.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     prefix \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'List' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def product(nums:List[int]) -> List[int]:\n",
+    "    res = [1] * (len(nums))\n",
+    "    prefix = 1\n",
+    "    for i in range(len(nums)):\n",
+    "        res[i] = prefix\n",
+    "        prefix *= nums[i]\n",
+    "    postfix = 1\n",
+    "    for i in range(len(nums)):\n",
+    "        res[i] *= postfix\n",
+    "        postfix *= nums[i]\n",
+    "    return res\n",
+    "product([1,2,3,4])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def product(nums:list[int]) -> list[int]:\n",
-    "    res = [1] * (len(nums))\n",
-    "    prefix = 1\n",
-    "     "
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
