--- a/product_of_array.ipynb
+++ b/product_of_array.ipynb
@@ -2,34 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'List' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/rohithr/Desktop/leetcode/product_of_array.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rohithr/Desktop/leetcode/product_of_array.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mproduct\u001b[39m(nums:List[\u001b[39mint\u001b[39m]) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m List[\u001b[39mint\u001b[39m]:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rohithr/Desktop/leetcode/product_of_array.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     res \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m] \u001b[39m*\u001b[39m (\u001b[39mlen\u001b[39m(nums))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rohithr/Desktop/leetcode/product_of_array.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     prefix \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'List' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24, 12, 8, 6]\n"
      ]
     }
    ],
    "source": [
-    "def product(nums:List[int]) -> List[int]:\n",
-    "    res = [1] * (len(nums))\n",
-    "    prefix = 1\n",
-    "    for i in range(len(nums)):\n",
-    "        res[i] = prefix\n",
-    "        prefix *= nums[i]\n",
-    "    postfix = 1\n",
-    "    for i in range(len(nums)):\n",
-    "        res[i] *= postfix\n",
-    "        postfix *= nums[i]\n",
-    "    return res\n",
-    "product([1,2,3,4])\n"
+    "nums = [1,2,3,4]\n",
+    "res = [1] * (len(nums))\n",
+    "prefix = 1\n",
+    "for i in range(len(nums)):\n",
+    "    res[i] = prefix\n",
+    "    prefix *= nums[i]\n",
+    "postfix = 1\n",
+    "for i in range(len(nums)-1,-1,-1):\n",
+    "    \n",
+    "    res[i] *= postfix\n",
+    "    postfix *= nums[i]\n",
+    "    \n",
+    "print(res)"
    ]
   },
   {
