--- a/longest_subsequence.ipynb
+++ b/longest_subsequence.ipynb
@@ -21,9 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def longest_subsequnce(nums):\n",
     "    numset = set(nums)\n",
@@ -31,10 +42,11 @@
     "    for n in nums:\n",
     "        if (n-1) not in numset:\n",
     "            length = 0\n",
-    "            while (n+1) in numset:\n",
+    "            while (n+length) in numset:\n",
     "                length += 1\n",
     "            longest = max(length,longest)\n",
-    "    return longest"
+    "    return longest\n",
+    "longest_subsequnce([100,4,200,1,3,2])"
    ]
   },
   {
