--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -8,11 +8,12 @@
    "source": [
     "#linked lista are as the  name suggests lists whihc are linked\n",
     "#a linked list consists for two concepts a node and a pointer,the node contians the data and the pointer points to the next data in the linked list\n",
-    "#the linked list is connected with the jhelps of pointers\n",
+    "#the linked list is connected with the help of pointers\n",
     "#the node are scatterd in the momory analogous to the buckets in hashmap\n",
     "#the node where the list starts is the head and the node where it ends is the tail\n",
     "\n",
     "#IMPLEMENTATION\n",
+    "\n",
     "#first we will create the node class --> it is the buleprint of all our nodes\n",
     "class Node():\n",
     "    def __init__(self,data): #when initialising the node we will pass the data that we wnat our node to hold\n",
@@ -40,8 +41,36 @@
     "            self.tail.next = new_node\n",
     "            self.tail = new_node\n",
     "            self.length += 1\n",
-    "        \n",
-    "        "
+    "    #this function appends the data at the begining of the linked list\n",
+    "    # a new instance of the new node is created for the Node class\n",
+    "    #if the linked list is empty follow the same steps as append\n",
+    "    # we make the 'next' of the new_node to point towards head that is currently pointing towards the first node\n",
+    "    #then we make the head to point towards the new node\n",
+    "    def prepend(self,data):\n",
+    "        new_node = Node(data)\n",
+    "        if self.head == None:\n",
+    "            self.head = new_node\n",
+    "            self.tail = self.head\n",
+    "            self.length += 1\n",
+    "        else:\n",
+    "            new_node.next = self.head\n",
+    "            self.head = new_node\n",
+    "            self.length  += 1\n",
+    "    #next we implement printlist()\n",
+    "    #check id the ll is empty if yes return \"empty\"\n",
+    "    #if not empty then create a new node called current_node and point to the head\n",
+    "    #initialise a while loop and loop untill the current_node is null .\n",
+    "    #print the current node data and increment the current by poiting to the next data\n",
+    "    def printlist(self):\n",
+    "        if self.head == None:\n",
+    "            print(\"The Linked List is empty\")\n",
+    "        else :\n",
+    "            current_node = self.head\n",
+    "            while current_node != None:\n",
+    "                print(current_node.data)\n",
+    "                current_node = current_node.next\n",
+    "            print()\n",
+    "    "
    ]
   }
  ],
