--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "#IMPLEMENTATION\n",
     "\n",
-    "#first we will create the node class --> it is the buleprint of all our nodes\n",
+    "#first we will create the node class --it is the buleprint of all our nodes\n",
     "class Node():\n",
     "    def __init__(self,data): #when initialising the node we will pass the data that we wnat our node to hold\n",
     "        self.data = data # the data passed during instantiation will be stored in self.data\n",
