linked_list notes

--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#linked lista are as the  name suggests lists whihc are linked\n",
+    "#linked lista are as the  name suggests lists which are linked\n",
     "#a linked list consists for two concepts a node and a pointer,the node contians the data and the pointer points to the next data in the linked list\n",
     "#the linked list is connected with the help of pointers\n",
-    "#the node are scatterd in the momory analogous to the buckets in hashmap\n",
+    "#the node are scatterd in the memory analogous to the buckets in hashmap\n",
     "#the node where the list starts is the head and the node where it ends is the tail\n",
     "\n",
     "#IMPLEMENTATION\n",
@@ -52,6 +52,8 @@
     "            self.head = new_node\n",
     "            self.tail = self.head\n",
     "            self.length += 1\n",
+    "        #so if my previous head was 7 and my new_node is 6 then my new_node.next points to 7 \n",
+    "        #and then with self.head im making 7 as the head and in the next line im making self.head which is currently 7 as my new_node which is 6 so finally my head becomes 6\n",
     "        else:\n",
     "            new_node.next = self.head\n",
     "            self.head = new_node\n",
