--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -37,6 +37,13 @@
     "            self.head = new_node\n",
     "            self.tail = self.head\n",
     "            self.length = 1\n",
+    "    \n",
+    "        #alternative approach\n",
+    "        # else :\n",
+    "        #     new_node.next = self.tail\n",
+    "        #     self.tail = new_node\n",
+    "        #     self.length += 1\n",
+    "            \n",
     "        else:\n",
     "            self.tail.next = new_node\n",
     "            self.tail = new_node\n",
@@ -72,8 +79,31 @@
     "                print(current_node.data)\n",
     "                current_node = current_node.next\n",
     "            print()\n",
+    "#Next comes the delete_by_value method where the user can enter a value and if the value is found in the list, it will be deleted.\n",
+    "#(If the value is found multiple times, only the first occurence of thevalue will be deleted.)\n",
+    "#First we check if the list is empty. If yes, we print appropriate message. If not, then we create a temporary node.\n",
+    "#Then we check if the value of the head is equal to the value we want deleted.\n",
+    "#If yes, we make the head equal to the node pointed by the 'next' of the head. Then we check if there are only one or zero nodes in the list\n",
+    "#If yes, then we update the tail to be equal to the head.\n",
+    "#By Doing this, the original 'head' gets disconnected from the list and the head becomes updated to what was originally the second node\n",
+    "#If these two cases are not encountered, then we have to traverse the list and check every node.\n",
+    "#So we loop until either the current node becomes None, signifying the end of the list, or until the data of the node next to the current node equals the data we want deleted.\n",
+    "#After coming out of the loop we check if the current node is not equal to None, it means the next node of the current node is the one we want deleted\n",
+    "#So we make the 'next' of the current node point to the next to the next of the current node.\n",
+    "#Effectively, we bypass the node we want deleted and establish a connection between the current and the next to next of the current nodes.\n",
+    "#After deleting the required node, we check if the current node's 'next' points to None, i.e., if it is the last node. If yes, then we update the tail\n",
+    "#And if the current node is None, it means we traversed the entire list but couldn't find the value.\n",
+    "#Time complexity is pretty clearly O(n)\n",
+    "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
