delete my value function

--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -94,8 +94,27 @@
     "#After deleting the required node, we check if the current node's 'next' points to None, i.e., if it is the last node. If yes, then we update the tail\n",
     "#And if the current node is None, it means we traversed the entire list but couldn't find the value.\n",
     "#Time complexity is pretty clearly O(n)\n",
-    "\n",
-    "    \n",
+    "def delete_by_value(self,data):\n",
+    "    if self.head ==  None:\n",
+    "        print(\"The Linked List Is Empty\")\n",
+    "        return\n",
+    "    current_node = self.head\n",
+    "    if current_node.data == data:\n",
+    "        self.head = self.head.next\n",
+    "        if self.head == None or self.head.next == None:\n",
+    "            self.tail = self.head\n",
+    "        self.length -= 1\n",
+    "        return\n",
+    "    while current_node.next != None and current_node.next.data != data:\n",
+    "        current_node = current_node.next\n",
+    "    if current_node.next != None:\n",
+    "        current_node.next = current_node.next.next\n",
+    "        if current_node.next = None:\n",
+    "            self.tail = current_node\n",
+    "        self.length -= 1\n",
+    "        return\n",
+    "    else:\n",
+    "        print(\"Value not found\")\n",
     "    "
    ]
   },
