--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -94,29 +94,38 @@
     "#After deleting the required node, we check if the current node's 'next' points to None, i.e., if it is the last node. If yes, then we update the tail\n",
     "#And if the current node is None, it means we traversed the entire list but couldn't find the value.\n",
     "#Time complexity is pretty clearly O(n)\n",
-    "def delete_by_value(self,data):\n",
-    "    if self.head ==  None:\n",
+    "def delete_by_value(self,data): \n",
+    "    if self.head ==  None: #check if the list is empty\n",
     "        print(\"The Linked List Is Empty\")\n",
     "        return\n",
     "    current_node = self.head\n",
-    "    if current_node.data == data:\n",
-    "        self.head = self.head.next\n",
-    "        if self.head == None or self.head.next == None:\n",
-    "            self.tail = self.head\n",
+    "    if current_node.data == data:#check if the head is the data\n",
+    "        self.head = self.head.next #disconnet the first head from the rest of the linked list\n",
+    "        if self.head == None or self.head.next == None: #check if there is only 1 or 2 values in the linked list\n",
+    "            self.tail = self.head #if yes then we update the tail to head\n",
     "        self.length -= 1\n",
     "        return\n",
-    "    while current_node.next != None and current_node.next.data != data:\n",
+    "\n",
+    "    #traverse through the list and check every node\n",
+    "    while current_node.next != None and current_node.next.data != data: #this loops untill we reach the end of the list or if the current node is not the node to be deleted\n",
     "        current_node = current_node.next\n",
-    "    if current_node.next != None:\n",
-    "        current_node.next = current_node.next.next\n",
-    "        if current_node.next = None:\n",
-    "            self.tail = current_node\n",
+    "    if current_node.next != None: \n",
+    "        current_node.next = current_node.next.next #this preforms the deletion \n",
+    "        if current_node.next == None:\n",
+    "            self.tail = current_node #if the next node to the current node is none then make tail as the current node\n",
     "        self.length -= 1\n",
     "        return\n",
     "    else:\n",
     "        print(\"Value not found\")\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
