--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -117,7 +117,22 @@
     "        return\n",
     "    else:\n",
     "        print(\"Value not found\")\n",
-    "    "
+    "#Next comes the insert operation, where we insert a data at a specified position\n",
+    "#If the position is greater than the length of the list, we simply follow the procedure of the append method where we add the node to the end of the list\n",
+    "#If the position is equal to 0, we follow the prepend procedure, where we append the node at the head\n",
+    "#If the postition is somewhere in between, then we create a temporary node which traverses the list upto the previous position of the position we want to enter the new node\n",
+    "#Now the 'next' of the temporary node is pointing to the next node in the list, wehre we want to insert our new node\n",
+    "#So first we link the new node and the node at the desired position by making the 'next' of the new node equal to the 'next' of the temporary node\n",
+    "#The temporary node and the new node point to the same position now, the position we want to insert the new node\n",
+    "#So we update the 'next' of the temporary node to point to the new node.\n",
+    "#This way, our new node occupies the position it intended to and the node which was originally there, gets pushed to the next position\n",
+    "#Since this requires traversal of the list, it is an O(n) operation.\n",
+    "def insert(self,position,data):\n",
+    "    if position >= self.length:\n",
+    "        if position > self.length:\n",
+    "            raise ValueError(\"position not available\")\n",
+    "        new_node = Node(data)\n",
+    "        "
    ]
   },
   {
