--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -132,6 +132,23 @@
     "        if position > self.length:\n",
     "            raise ValueError(\"position not available\")\n",
     "        new_node = Node(data)\n",
+    "        self.tail.next = new_node\n",
+    "        self.tail = new_node\n",
+    "        self.length += 1\n",
+    "    elif position == 0:\n",
+    "        new_node = Node(data)\n",
+    "        new_node.next = self.head\n",
+    "        self.head = new_node\n",
+    "        self.length += 1\n",
+    "    else:\n",
+    "        new_node = Node(data)\n",
+    "        current_node = self.head\n",
+    "        for i in range(position-1):\n",
+    "            current_node = current_node.next\n",
+    "        new_node.next = current_node.next\n",
+    "        current_node.next = new_node\n",
+    "        self.length += 1\n",
+    "        \n",
     "        "
    ]
   },
