delete_by _position

--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -149,7 +149,32 @@
     "        current_node.next = new_node\n",
     "        self.length += 1\n",
     "        \n",
-    "        "
+    "#Another functionality of linked lists can be deleting a node based on its position.\n",
+    "#It follows more or less the same procedure as delete_by_value method.\n",
+    "#Only real difference is instead of traversing the list till the current node becomes None or the next node equals the required data,\n",
+    "#Here we traverse the list till the position one place behind the position we want deleted, similar to the insert operation\n",
+    "#And then we bypass the next node to the current node and link it to the next to the next node of the current node.\n",
+    "#We do a similar check for tail and update it just like in the delete_by_value method.\n",
+    "#This operation too has a time complexity of O(n) in the worst case. \n",
+    "def delete_by_position(self,position):\n",
+    "    if self.head == None:\n",
+    "        print(\"The Linked Lst is Empty Pleade add some values\")\n",
+    "    if position == 0:\n",
+    "        self.head = self.head.next\n",
+    "        if self.head == None or self.head.next == None:\n",
+    "            self.tail = self.head\n",
+    "        self.length -= 1\n",
+    "        return \n",
+    "    if position > self.length:\n",
+    "        position = self.length - 1\n",
+    "    current_node = self.head\n",
+    "    for i in range (position - 1):\n",
+    "        current_node = current_node.next\n",
+    "    current_node.next = current_node.next.next\n",
+    "    self.length -= 1\n",
+    "    if current_node.next = None:\n",
+    "        self.tail = current_node\n",
+    "    return"
    ]
   },
   {
