completed linked list implementation

--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -174,7 +174,55 @@
     "    self.length -= 1\n",
     "    if current_node.next = None:\n",
     "        self.tail = current_node\n",
-    "    return"
+    "    return\n",
+    "if __name__ == '__main__':\n",
+    "\n",
+    "    my_linked_list = LinkedList()\n",
+    "    my_linked_list.print_list()\n",
+    "#Empty\n",
+    "\n",
+    "    my_linked_list.append(5)\n",
+    "    my_linked_list.append(2)\n",
+    "    my_linked_list.append(9)\n",
+    "    my_linked_list.print_list()\n",
+    "#5 2 9\n",
+    "\n",
+    "    my_linked_list.prepend(4)\n",
+    "    my_linked_list.print_list()\n",
+    "#4 5 2 9\n",
+    "\n",
+    "    my_linked_list.insert(2,7)\n",
+    "    my_linked_list.print_list()\n",
+    "#4 5 7 2 9\n",
+    "\n",
+    "    my_linked_list.insert(0,0)\n",
+    "    my_linked_list.insert(6,0)\n",
+    "    my_linked_list.insert(9,3)\n",
+    "    my_linked_list.print_list()\n",
+    "#This position is not available. Inserting at the end of the list\n",
+    "#0 4 5 7 2 9 0 3\n",
+    "\n",
+    "    my_linked_list.delete_by_value(3)\n",
+    "    my_linked_list.print_list()\n",
+    "#0 4 5 7 2 9 0\n",
+    "\n",
+    "    my_linked_list.delete_by_value(0)\n",
+    "    my_linked_list.print_list()\n",
+    "#4 5 7 2 9 0\n",
+    "\n",
+    "    my_linked_list.delete_by_position(3)\n",
+    "    my_linked_list.print_list()\n",
+    "#4 5 7 9 0\n",
+    "\n",
+    "    my_linked_list.delete_by_position(0)\n",
+    "    my_linked_list.print_list()\n",
+    "#5 7 9 0\n",
+    "\n",
+    "    my_linked_list.delete_by_position(8)\n",
+    "    my_linked_list.print_list()\n",
+    "#5 7 9\n",
+    "    print(my_linked_list.length)\n",
+    "#3"
    ]
   },
   {
