--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -2,14 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Linked List is empty\n",
+      "5\n",
+      "2\n",
+      "9\n",
+      "\n",
+      "4\n",
+      "5\n",
+      "2\n",
+      "9\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'LinkedList' object has no attribute 'insert'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 186\u001b[0m\n\u001b[1;32m    183\u001b[0m     my_linked_list\u001b[38;5;241m.\u001b[39mprint_list()\n\u001b[1;32m    184\u001b[0m \u001b[38;5;66;03m#4 5 2 9\u001b[39;00m\n\u001b[0;32m--> 186\u001b[0m     \u001b[43mmy_linked_list\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minsert\u001b[49m(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m7\u001b[39m)\n\u001b[1;32m    187\u001b[0m     my_linked_list\u001b[38;5;241m.\u001b[39mprint_list()\n\u001b[1;32m    188\u001b[0m \u001b[38;5;66;03m#4 5 7 2 9\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'LinkedList' object has no attribute 'insert'"
+     ]
+    }
+   ],
    "source": [
     "#linked lista are as the  name suggests lists which are linked\n",
     "#a linked list consists for two concepts a node and a pointer,the node contians the data and the pointer points to the next data in the linked list\n",
     "#the linked list is connected with the help of pointers\n",
-    "#the node are scatterd in the memory analogous to the buckets in hashmap\n",
+    "#the nodes are scatterd in the memory analogous to the buckets in hashmap\n",
     "#the node where the list starts is the head and the node where it ends is the tail\n",
     "\n",
     "#IMPLEMENTATION\n",
@@ -70,7 +98,7 @@
     "    #if not empty then create a new node called current_node and point to the head\n",
     "    #initialise a while loop and loop untill the current_node is null .\n",
     "    #print the current node data and increment the current by poiting to the next data\n",
-    "    def printlist(self):\n",
+    "    def print_list(self):\n",
     "        if self.head == None:\n",
     "            print(\"The Linked List is empty\")\n",
     "        else :\n",
@@ -172,7 +200,7 @@
     "        current_node = current_node.next\n",
     "    current_node.next = current_node.next.next\n",
     "    self.length -= 1\n",
-    "    if current_node.next = None:\n",
+    "    if current_node.next == None:\n",
     "        self.tail = current_node\n",
     "    return\n",
     "if __name__ == '__main__':\n",
@@ -241,8 +269,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
