prepend fucntion added

--- a/doubly_linked_list.ipynb
+++ b/doubly_linked_list.ipynb
@@ -41,13 +41,28 @@
     "            self.head = new_node\n",
     "            self.tail = self.head\n",
     "            self.length += 1\n",
+    "            return \n",
     "        else:\n",
     "            new_node.previous = self.tail\n",
     "            self.tail.next = new_node\n",
     "            self.tail = new_node\n",
     "            self.length += 1\n",
     "            return\n",
-    "                \n",
+    "    def prepend(self,data):\n",
+    "        new_node = Node(data)\n",
+    "        if self.head == None:\n",
+    "            self.head = new_node\n",
+    "            self.tail = self.head\n",
+    "            self.length += 1\n",
+    "            return\n",
+    "        else:\n",
+    "            new_node.previous = self.head\n",
+    "            self.head.next = new_node\n",
+    "            self.head = new_node\n",
+    "            self.length += 1\n",
+    "            return\n",
+    "        \n",
+    "            \n",
     "        "
    ]
   },
