insert at a position

--- a/doubly_linked_list.ipynb
+++ b/doubly_linked_list.ipynb
@@ -61,8 +61,20 @@
     "            self.head = new_node\n",
     "            self.length += 1\n",
     "            return\n",
+    "    # else:\n",
+    "    #     self.head.next = new_node\n",
+    "    #     new_node.previous = self.head\n",
+    "    #     self.head = new_node\n",
+    "    #     self.length += 1\n",
+    "    #     return\n",
+    "    def insert(self,data,position):\n",
+    "        if position == 0:\n",
+    "            self.prepend(data)\n",
+    "            return\n",
+    "        if position >= self.length:\n",
+    "            self.append(data)\n",
+    "            return\n",
     "        \n",
-    "            \n",
     "        "
    ]
   },
