--- a/doubly_linked_list.ipynb
+++ b/doubly_linked_list.ipynb
@@ -74,8 +74,17 @@
     "        if position >= self.length:\n",
     "            self.append(data)\n",
     "            return\n",
-    "        \n",
-    "        "
+    "        else:\n",
+    "            new_node = Node(data)\n",
+    "            current_node = self.head\n",
+    "            for i in range(position - 1): #traverse upto previous node of the position\n",
+    "                current_node = current_node.next\n",
+    "            current_node.next = new_node\n",
+    "            new_node.previous = current_node\n",
+    "            new_node.next = current_node.next\n",
+    "            current_node.next.previous = new_node\n",
+    "            self.length += 1\n",
+    "            return"
    ]
   },
   {
