delete_by_value

--- a/doubly_linked_list.ipynb
+++ b/doubly_linked_list.ipynb
@@ -84,7 +84,19 @@
     "            new_node.next = current_node.next\n",
     "            current_node.next.previous = new_node\n",
     "            self.length += 1\n",
-    "            return"
+    "            return\n",
+    "    def delete_by_value(self,data):\n",
+    "        if self.head == None:\n",
+    "            print(\"The Linked List is Empty\")\n",
+    "            return\n",
+    "        current_node = self.head\n",
+    "        if current_node.data == data:\n",
+    "            self.head = self.head.next\n",
+    "            if self.head == None or self.head.next == None:\n",
+    "                self.tail = self.head\n",
+    "            if self.head != None:\n",
+    "                self.head.previous = None\n",
+    "            "
    ]
   },
   {
@@ -96,8 +108,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
