--- a/doubly_linked_list.ipynb
+++ b/doubly_linked_list.ipynb
@@ -87,8 +87,8 @@
     "            return\n",
     "    def delete_by_value(self,data):\n",
     "        if self.head == None:\n",
-    "            print(\"The Linked List is Empty\")\n",
-    "            return\n",
+    "            print(\"the linked list is empty \")\n",
+    "        \n",
     "        current_node = self.head\n",
     "        if current_node.data == data:\n",
     "            self.head = self.head.next\n",
@@ -96,6 +96,21 @@
     "                self.tail = self.head\n",
     "            if self.head != None:\n",
     "                self.head.previous = None\n",
+    "            self.length += 1\n",
+    "            return\n",
+    "        try:\n",
+    "            while current_node != None and current_node.next.data != data:\n",
+    "                current_node = current_node.next\n",
+    "            if current_node != None:\n",
+    "                current_node.next = current_node.next.next\n",
+    "                if current_node.next != None:\n",
+    "                    current_node.next.previous = current_node\n",
+    "                else:\n",
+    "                    self.tail = current_node\n",
+    "                self.length += 1\n",
+    "        except AttributeError:\n",
+    "            print(\"value not found\")\n",
+    "            return\n",
     "            "
    ]
   },
