--- a/targetsum.ipynb
+++ b/targetsum.ipynb
@@ -24,6 +24,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#target sum\n",
     "def targetsum(self , nums : List[nums] , target :int) -> int:\n",
@@ -220,6 +227,37 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#bute force\n",
+    "def brute_force(array,target):\n",
+    "    for i in range(len(array)-1):\n",
+    "        for j in range (i+1,len(array)):\n",
+    "            if array[i] + array[j] == target:\n",
+    "                return [i,j]\n",
+    "    return \"not found\"\n",
+    "print(brute_force([2,7,11,15],9))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   },
   "orig_nbformat": 4
  },
