--- a/doubly_linked_list.ipynb
+++ b/doubly_linked_list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "        self.data = data\n",
     "        self.next = None\n",
     "        self.previous = None\n",
-    "class doublyLinkedList():\n",
+    "class DoublyLinkedList():\n",
     "    def __int__(self):\n",
     "        self.head = None\n",
     "        self.tail = self.head\n",
@@ -111,7 +111,10 @@
     "        except AttributeError:\n",
     "            print(\"value not found\")\n",
     "            return\n",
-    "            "
+    "    def delete_by_position(self,position):\n",
+    "        if self.head == None:\n",
+    "            print(\"the linked list is empty \")\n",
+    "        \n"
    ]
   },
   {
@@ -129,7 +132,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.18"
   }
  },
