delete_by_position

--- a/doubly_linked_list.ipynb
+++ b/doubly_linked_list.ipynb
@@ -114,7 +114,24 @@
     "    def delete_by_position(self,position):\n",
     "        if self.head == None:\n",
     "            print(\"the linked list is empty \")\n",
-    "        \n"
+    "        if position == 0:\n",
+    "            self.head = self.head.next\n",
+    "            if self.head == None or self.head.next == None:\n",
+    "                self.tail = self.head\n",
+    "                if self.head  == None:\n",
+    "                    self.length -= 1\n",
+    "                    return\n",
+    "        if position >= self.length :\n",
+    "            position = self.length - 1\n",
+    "        for i in range(position - 1):\n",
+    "            current_node = current_node.next\n",
+    "        current_node.next  = current_node.next.next\n",
+    "        if current_node.next != None:\n",
+    "            current_node.next.previous = current_node\n",
+    "        else:\n",
+    "            self.tail = current_node\n",
+    "        self.length -= 1\n",
+    "        return"
    ]
   },
   {
