Update documentation for hash tables and linked lists.

--- a/linked_list.ipynb
+++ b/linked_list.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "#linked lista are as the  name suggests lists which are linked\n",
+    "#linked lists are as the  name suggests lists which are linked\n",
     "#a linked list consists for two concepts a node and a pointer,the node contians the data and the pointer points to the next data in the linked list\n",
     "#the linked list is connected with the help of pointers\n",
     "#the nodes are scatterd in the memory analogous to the buckets in hashmap\n",
